# ditty

./: .editorconfig  .gitmodules  CMakeLists.txt  readme.org  shell.nix
app/native/: CMakeLists.txt  main.c
app/pico/: CMakeLists.txt
cmake/: pico.cmake
